--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Your Profile - Pusaq</title>
   <style>
     body {
@@ -23,9 +24,13 @@
       height: 40px;
     }
 
+    .topbar .nav-links {
+      display: flex;
+      gap: 1rem;
+    }
+
     .topbar .nav-links a {
       color: #022f60;
-      margin-left: 1rem;
       font-weight: bold;
       text-decoration: none;
     }
@@ -81,6 +86,28 @@
     button:hover {
       background-color: #025bd2;
     }
+
+    @media (max-width: 768px) {
+      .topbar {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .topbar .nav-links {
+        flex-direction: column;
+        width: 100%;
+        margin-top: 1rem;
+      }
+
+      .profile-box {
+        margin: 1rem;
+        padding: 1.5rem;
+      }
+
+      input, button {
+        font-size: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -108,6 +135,7 @@
   <script>
     const API_BASE = "https://api.pusaq.app/api";
     const currentUser = sessionStorage.getItem("currentUser");
+
     if (!currentUser) {
       alert("Please log in.");
       window.location.href = "index.html";
@@ -126,8 +154,6 @@
 
       displayName.value = profileData.name || currentUser;
       role.value = profileData.role || "user";
-
-      // Handle image (if stored in DB)
       avatar.src = profileData.image || "https://via.placeholder.com/100";
     }
 
@@ -143,3 +169,34 @@
     });
 
     async function saveProfile() {
+      profileData.name = displayName.value;
+
+      const res = await fetch(`${API_BASE}/users/${currentUser}`, {
+        method: "PATCH",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify(profileData)
+      });
+
+      if (res.ok) {
+        alert("✅ Profile updated!");
+        loadProfile();
+      } else {
+        alert("❌ Failed to save.");
+      }
+    }
+
+    function goToDashboard() {
+      window.location.href = role.value === "admin" ? "admin.html" : "dashboard.html";
+    }
+
+    function logout() {
+      sessionStorage.clear();
+      window.location.href = "index.html";
+    }
+
+    loadProfile();
+  </script>
+</body>
+</html>
